# hnac

./: .coveragerc  .gitignore  .travis.yaml  .travis.yml  .travis.yml.disabled  MANIFEST.in  README.md  alembic.ini  crawl_hn.py  hn_api_server.py  hnac.ini  pyproject.toml  requirements-base.txt  requirements-test.txt  requirements.txt  setup.py  uwsgi.ini  wsgi.py
.github/workflows/: semgrep.yml
alembic/: env.py
alembic/versions/: 3210325c0fda_added_the_reports_table.py  3ebfff8e02a6_added_the_story_data_table.py  42b3f8b5f469_initial_migration.py  6276344586b8_added_the_tokens_table.py  6cbf482e0583_added_indexes_to_the_score_and_time_.py  7c65717fdf7f_added_the_hackernews_users_tablee.py  8e3d19adf902_added_the_urls_table.py  a0649018e180_added_the_missing_unique_indexes_in_the_.py  a442f4daf893_added_the_jti_field_to_the_users_table.py  (+3 more)
hnac/: channels.py  cli.py  configuration.py  crawlers.py  exceptions.py  firebase.py  helpers.py  jobs.py  logging.py  messages.py  models.py  processors.py  queues.py  schemas.py  sources.py
hnac/cli/: cli.py  (+1 more)
scripts/: connect_to_queue.py  dump_stories_by_time_range.py  dump_stories_from_couchdb.py  start_hnac_web_server.sh
templates/: settings.py
tests/: common.py  mock_data.py  settings.py  test_api.py  test_cli_commands_crawler.py  test_cli_datatypes.py  test_commands.py  test_env  test_helpers.py  test_jobs.py  test_jwt_authentication.py  test_models.py  test_processors.py  test_queries_stories.py  test_sources.py  test_web_authentication.py  test_web_queries_parsers.py
utilities/: print_stories.py  print_urls.py
(+27 files in other folders)
